# Quant-Time-Series-Project

./: .gitignore  README.md  gtfs_final_slide.pptx  main.py  pyproject.toml  quant-tsf.ipynb
lightning_logs/version_0/: events.out.tfevents.1776550376.codespaces-e3325d  hparams.yaml
lightning_logs/version_1/: events.out.tfevents.1776550815.codespaces-e3325d  hparams.yaml
lightning_logs/version_2/: events.out.tfevents.1776550985.codespaces-e3325d  hparams.yaml
lightning_logs/version_3/: events.out.tfevents.1776551003.codespaces-e3325d  hparams.yaml
lightning_logs/version_4/: events.out.tfevents.1776551156.codespaces-e3325d  hparams.yaml
lightning_logs/version_5/: events.out.tfevents.1776551361.codespaces-e3325d
